:art: :sparkles: :hammer: The main function is done

--- a/src/component/modules/main-configure-panel/index.scss
+++ b/src/component/modules/main-configure-panel/index.scss
@@ -1,4 +1,9 @@
 .main-configure-panel {
   max-height: 100%;
   overflow-y: auto;
+  .ant-card-body{
+    .ant-row:last-of-type{
+      margin: 0;
+    }
+  }
 }
