--- a/src/component/modules/main-configure-panel/index.scss
+++ b/src/component/modules/main-configure-panel/index.scss
@@ -1,9 +1,20 @@
 .main-configure-panel {
   max-height: 100%;
   overflow-y: auto;
-  .ant-card-body{
-    .ant-row:last-of-type{
+  .ant-card-head {
+    p {
       margin: 0;
+    }
+  }
+  .ant-card-body {
+    .ant-row {
+      margin: 12px 0;
+    }
+    .ant-row:first-of-type {
+      margin-top: 0;
+    }
+    .ant-row:last-of-type {
+      margin-bottom: 0;
     }
   }
 }
