--- a/src/component/modules/main-configure-panel/index.scss
+++ b/src/component/modules/main-configure-panel/index.scss
@@ -1,20 +1,23 @@
 .main-configure-panel {
   max-height: 100%;
   overflow-y: auto;
-  .ant-card-head {
-    p {
-      margin: 0;
+  overflow-x: hidden;
+  .ant-form {
+    .ant-card-head {
+      p {
+        margin: 0;
+      }
     }
-  }
-  .ant-card-body {
-    .ant-row {
-      margin: 12px 0;
-    }
-    .ant-row:first-of-type {
-      margin-top: 0;
-    }
-    .ant-row:last-of-type {
-      margin-bottom: 0;
+    .ant-card-body {
+      .ant-row {
+        margin: 12px 0;
+      }
+      .ant-row:first-of-type {
+        margin-top: 0;
+      }
+      .ant-row:last-of-type {
+        margin-bottom: 0;
+      }
     }
   }
 }
